[package]
name = "joint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures = "0.3.24"
tokio = { version = "1.21.1", features = ["full"] }
lazy_static = "1.4.0"
rand = "0.8.3"
